@@ -16,4 +16,6 @@ Please see http://www.poissonboltzmann.org/pdb2pqr/release-history
  * Creating print output no longer clears the chain id data from atoms in the data. (Affected resinter plugin)
  * Removed possibility of one plug-in affecting the output of another. 
  * Fixed --protonation=new option for propka30.
+ * Improved time reporting for apbs jobs.
+ * Fixed opal runtime reporting.
 
